Closed Bug 191919 Opened 23 years ago Closed 21 years ago

Problem rendering Opentype fonts with CFF (postscript) outlines

Categories

(Core Graveyard :: GFX: Win32, defect)

x86
Windows 2000
defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: awd, Assigned: emk)

References

Details

Attachments

(4 files, 1 obsolete file)

User-Agent: Mozilla/5.0 (Windows; U; Windows NT 5.0; en-US; rv:1.3a) Gecko/20021212 Build Identifier: Mozilla/5.0 (Windows; U; Windows NT 5.0; en-US; rv:1.3a) Gecko/20021212 Bit of a strange one this. I have a stylesheet that uses the Lucida Sans Std family of fonts produced by Adobe systems. These fonts are in OpenType format. On Mozilla, the fonts are ignored and the next option in the CSS file is used instead. The page and fonts display correctly on IE 6.0. Having done some research it seems that Mozilla seems to have problems with rendering OpenType fonts that have their font data inside in Postscript format rather than Truetype (opentype fonts may use either format internally). I believe this because all the other opentype fonts (with postscript format) that I have tested with also fail, while opentype fonts that have their font data in truetype format seems to render just fine. More information about OpenType is here: http://www.adobe.com/type/opentype/main.html Reproducible: Always Steps to Reproduce: 1. Obtain a set of Opentype font in Postscript, rather than Truetype format 2. Modify stylesheet to load these fonts 3. Load test page. Actual Results: Fonts do not render correctly. Expected Results: Render the fonts correctly. See attached screenshot. I have also attached my stylesheet and test html page. I use Lucida Sans Std as the test font, but any OpenType font with the font data in postscript format should produce the same results. Note that the OpenType fonts supplied with Windows 2000 have their data in TrueType format and so will work correctly. (Lucida Sans Std can be found here: http://www.adobe.com/type/browser/P/P_1359.jhtml)
Attached file Style Test Page
Test page used to show problem.
Attached file Style Test CSS File
The CSS file used to style.html to render page.
Attachment #113530 - Attachment description: Screenshot showing the incorrect rendering → Screenshot showing the incorrect rendering. Mozilla on the left is incorrect, IE on right renders the page in Lucida Sans which is correct.
->Gfx:Win32. (I'm assuming this is a font installed on your system, since there's no mention of any downloadable font stuff in the stylesheet. We don't support downloadable fonts anyway.)
Assignee: font → kmcclusk
Component: Layout: Fonts and Text → GFX: Win32
Yes the fonts are installed on my system, rather than being downloaded.
I have had similar problems with Internet Explorer and Opera both rendering text in Adobe's "Tekton Pro", but Mozilla/Firefox skipping to the next alternative font-family.
(In reply to comment #6) > I have had similar problems with Internet Explorer and Opera both rendering text > in Adobe's "Tekton Pro", but Mozilla/Firefox skipping to the next alternative > font-family. Likewise with the Opentype versions of Minion Pro, Myriad Pro, and Courier Std that come with Acrobat Reader 7 (tested with Firefox 1.0 under XP SP2).
Attached patch Patch rv1.0 (obsolete) — Splinter Review
GetFontCCMAP search for 'loca' table in the font. If table not found, that font will be ignored. However, OpenType fonts with CFF outline does not have 'loca' table. So those fonts will be always ignored.
Assignee: kmcclusk → VYV03354
Status: UNCONFIRMED → ASSIGNED
Attachment #182541 - Flags: review?(emaijala)
Attachment #182541 - Flags: review?(emaijala) → review?(rbs)
*** Bug 292680 has been marked as a duplicate of this bug. ***
Comment on attachment 182541 [details] [diff] [review] Patch rv1.0 r+sr=rbs Need a comment in the code that "OpenType fonts with CFF outline do not have the 'loca' table". Wish Adobe has made that clear. I had to dig a big to find http://partners.adobe.com/public/developer/opentype/index_cff.html
Attachment #182541 - Flags: superreview+
Attachment #182541 - Flags: review?(rbs)
Attachment #182541 - Flags: review+
Attached patch Patch rv1.1Splinter Review
Added comment and diff'ed from newest revision. Requesting 1.8b2 approval. This is a trivial low risk patch and adds support for OpenType with CFF that was missing from Gecko for long time while Internet Explorer and Opera had. But if you think it's too late in the b2 cycle, I can wait until b3.
Attachment #182541 - Attachment is obsolete: true
Attachment #184156 - Flags: superreview+
Attachment #184156 - Flags: review+
Attachment #184156 - Flags: approval1.8b2?
(In reply to comment #11) > This is a trivial low risk patch and adds support > for OpenType with CFF that was missing from Gecko for long time while Internet > Explorer and Opera had. Nay, Internet Explorer doesn't support it either--at least not in the preferences. Lots of programs don't.
Comment on attachment 184156 [details] [diff] [review] Patch rv1.1 moving request out to b3. We're very nearly wrapped up on 1.8b2.
Attachment #184156 - Flags: approval1.8b3?
Attachment #184156 - Flags: approval1.8b2?
Attachment #184156 - Flags: approval1.8b2-
Comment on attachment 184156 [details] [diff] [review] Patch rv1.1 a=shaver
Attachment #184156 - Flags: approval1.8b3? → approval1.8b3+
checked-in.
Status: ASSIGNED → RESOLVED
Closed: 21 years ago
Resolution: --- → FIXED
*** Bug 298010 has been marked as a duplicate of this bug. ***
*** Bug 298010 has been marked as a duplicate of this bug. ***
*** Bug 245017 has been marked as a duplicate of this bug. ***
add CFF/postscript to the summary for a better tracking (although it's already fixed)
Summary: Problem rendering Opentype fonts → Problem rendering Opentype fonts with CFF (postscript) outlines
Product: Core → Core Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: