Bug 191919 Problem rendering Opentype fonts r+sr=rbs, a=shaver patch by VYV03354@nifty.ne.jp